# autoresearch-trader

./: .gitignore  README.md  analysis.ipynb  backtest.py  backtest_visual.html  opt.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py  visualise.py
