[project]
name = "autoresearch-trader"
version = "0.1.0"
description = "Autonomous trading strategy research pipeline"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.0",
    "statsmodels>=0.14",
    "scipy>=1.11",
]
